Fixed main inventory page backend

--- a/Pages/Inventory/Index.cshtml
+++ b/Pages/Inventory/Index.cshtml
@@ -90,12 +90,12 @@
             {
                 <tr>
                     <td>@counter</td>
-                    <th>@item.disasterName</th>
+                    <td>@item.disasterName</td>
                     <td>@item.centerName</td>
                     <td>@item.itemName</td>
                     <td>@item.itemType</td>
                     <td>@item.unitMeasure</td>
-                    <td>@item.qty</td>
+                    <td>@item.remainingQty/@item.qty</td>
                     <td>@item.remarks</td>
                     <td width="5%">
                         <div class="d-inline position-relative">
