--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -234,7 +234,7 @@
         <div class="col-md-6 mx-auto">
             <h1><img src="/white-logo-horizontal.png" alt="" id="logo"></h1>
             <p class="lead my-3">Together, we stand stronger in the face of adversity.</p>
-            <a class="btn btn-outline-secondary text-white" href="#">Learn about Us</a>
+            <a class="btn btn-outline-secondary text-white" href="/about">Learn More</a>
         </div>
     </div>
 </div>
