--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -22,7 +22,6 @@
         <div class="col-md-6 mx-auto">
             <h1><img src="/white-logo-horizontal.png" alt="" id="logo"></h1>
             <p class="lead my-3">Together, we stand stronger in the face of adversity.</p>
-            <a class="btn btn-outline-secondary text-white" href="#">Learn about Us</a>
         </div>
     </div>
 
@@ -54,25 +53,25 @@
                     <div class="col-md-6">
                         <img src="/images/tagala.png" alt="Agatha Gwen Tagala" class="bd-placeholder-img rounded-circle" width="140" height="140">
                         <h5 class="pt-2">Agatha Gwen Tagala</h5>
-                        <p> Sample Description</p>
+                        <p>Leader, Back-end Developer</p>
                     </div>
 
                     <div class="col-md-6">
                         <img src="/images/guzon.png" alt="Jeanne Margaret Guzon" class="bd-placeholder-img rounded-circle" width="140" height="140">
                         <h5 class="pt-2">Jeanne Margaret Guzon</h5>
-                        <p> Sample Description </p>
+                        <p>Front-end Developer</p>
                     </div>
 
                     <div class="col-md-6">
                         <img src="/images/bartolome.jpg" alt="Ian Vincent Bartolome" class="bd-placeholder-img rounded-circle" width="140" height="140">
                         <h5 class="pt-2">Ian Vincent Bartolome</h5>
-                        <p> Sample Description</p>
+                        <p>Front-end Developer</p>
                     </div>
 
                     <div class="col-md-6">
                         <img src="/images/sudaria.png" alt="Patrick Sudaria" class="bd-placeholder-img rounded-circle" width="140" height="140">
                         <h5 class="pt-2">Patrick Sudaria</h5>
-                        <p> Sample Description</p>
+                        <p>Back-end Developer</p>
                     </div>
                 </div>
             </div>  
