--- a/Pages/EvacuationCenter/Profile.cshtml
+++ b/Pages/EvacuationCenter/Profile.cshtml
@@ -95,7 +95,7 @@
 			</li>
 
 			<li class="list-group-item d-flex justify-content-between lh-sm">
-				<div><h6 class="my-0">Street Address</h6></div>
+				<div><h6 class="my-0">Address</h6></div>
 				<span>@Model.evacuationInfo.streetAddress, Brgy. @Model.evacuationInfo.barangayName</span>
 			</li>
 
