--- a/Pages/disaster/profile/inventory/Index.cshtml
+++ b/Pages/disaster/profile/inventory/Index.cshtml
@@ -232,8 +232,8 @@
 		var table = $('#inventory-table').DataTable({
 			responsive: true,
 			columnDefs: [
-				{ "orderable": true, "targets": [0, 1] }, // Sortable columns
-				{ "orderable": false, "targets": [2, 3, 4, 5, 6] } // Non-sortable columns
+				{ "orderable": true, "targets": [0, 1, 3] }, // Sortable columns
+				{ "orderable": false, "targets": [2, 4, 5, 6] } // Non-sortable columns
 			]
 		});
 
