--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -25,9 +25,8 @@
         overflow-x: auto;
         scroll-snap-type: x mandatory;
         scroll-behavior: smooth;
-        box-shadow: 0 2.9rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+        /*box-shadow: 0 2.9rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);*/
         border-radius: 0.5rem;
-
     }
 
     .slider img {
@@ -65,6 +64,7 @@
     }
 
     body {
+        /*background-image: url('./images/bgimg.jpg');*/
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed; /* This ensures the background image stays fixed when scrolling */
