--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -45,7 +45,6 @@
 	</div>
 }
 
-
 <style>
 	a {
 		text-decoration: none;
@@ -56,7 +55,6 @@
 		margin-right: 10px; /* Adjust the margin value as needed */
 	}
 </style>
-
 
 <div class="content">
 	<!-- Breadcrumb -->
@@ -146,24 +144,48 @@
 			]
 		});
 
-		// Adding filters to specific columns
 		table.columns([3]).every(function () {
 			var column = this;
-			var select = $('<select><option value=""></option></select>')
-				.appendTo($(column.header()))
-				.on('change', function () {
-					var val = $.fn.dataTable.util.escapeRegex(
-						$(this).val()
-					);
+			var filterContainer = $('<div class="dropdown align-items-center d-inline-flex ps-2"></div>').appendTo($(column.header()));
+			var btn = $('<button class="btn btn-sm btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>').appendTo(filterContainer);
+			var menu = $('<div class="dropdown-menu p-3"></div>').appendTo(filterContainer);
 
-					column
-						.search(val ? '^' + val + '$' : '', true, false)
-						.draw();
-				});
+			function updateFilterButton() {
+				var hasActiveFilter = column.search() !== '';
+				btn.toggleClass('btn-warning', hasActiveFilter);
+			}
 
 			column.data().unique().sort().each(function (d, j) {
-				select.append('<option value="' + d + '">' + d + '</option>');
+				menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="' + d + '">' +
+					'<label class="form-check-label ps-1">' + d + '</label></div>');
 			});
+			menu.prepend('<div class="form-check"><input class="form-check-input select-all" type="checkbox" value="select-all">' +
+				'<label class="form-check-label ps-1">Select All</label></div>');
+
+			menu.append('<hr class="dropdown-divider"><div class="p-1"><button type="button" class="btn btn-sm btn-light clear-filter"><i class="bi bi-eraser pe-1"></i>Clear Filter</button></div>');
+
+			menu.find('.form-check-input, .clear-filter').on('click', function () {
+				var checked = $(this).prop('checked');
+
+				if ($(this).hasClass('form-check-input')) {
+					if ($(this).val() === 'select-all') {
+						menu.find('.form-check-input').prop('checked', checked);
+					} else if (!checked) {
+						menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+					}
+				} else {
+					menu.find('.form-check-input').prop('checked', false);
+					menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+				}
+
+				var selectedValues = menu.find('.form-check-input:checked').map(function () {
+					return $(this).val();
+				}).get();
+
+				column.search(selectedValues.length > 0 ? '^(' + selectedValues.join('|') + ')$' : '', true, false).draw();
+				updateFilterButton();
+			});
+			updateFilterButton();
 		});
 	});
 </script>
