Adjusted filter in ec staff

--- a/Pages/ECStaff/Index.cshtml
+++ b/Pages/ECStaff/Index.cshtml
@@ -65,12 +65,7 @@
 	</table>
 </div>
 
-<style>
-	.dropdown-menu {
-		min-width: 225px; /* Change for minimum width of the filter menu */
-	}
-</style>
-
+<!-- Making the table responsive -->
 <script>
 	$(document).ready(function () {
 		var table = $('#staff-table').DataTable({
